--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/vim-over"]
 	path = bundle/vim-over
 	url = https://github.com/osyo-manga/vim-over.git
+[submodule "bundle/vinegar"]
+	path = bundle/vinegar
+	url = https://github.com/tpope/vim-vinegar.git
