Added ctrlp back (somewhat)
added the updated ctrlp : ctrlpvim/ctrlp.vim

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "bundle/markdown"]
 	path = bundle/markdown
 	url = git://github.com/tpope/vim-markdown.git
+[submodule "ctrlp"]
+	path = ctrlp
+	url = git://github.com/ctrlpvim/ctrlp.vim.git
