Updates to work with vim-plug

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,28 @@
-.netrwhist
+
+# Created by https://www.gitignore.io/api/vim
+
+### Vim ###
+
+# swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+# session
+Session.vim
 session/
-*.swp
-*.swo
-doc/tags
+
+# temporary
+.netrwhist
+*~
+
+# auto-generated tag files
+tags
+
+# unwanted folders
+
 undos
 swaps
+bundle
+
+# End of https://www.gitignore.io/api/vim
